dark mode bg and text color fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-white text-gray-900
+  dark:bg-gray-900 dark:text-gray-300;
+}
